--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   localstack:
     image: localstack/localstack
-    container_name: localstack
+    container_name: localstack-s3
     environment:
       - SERVICES=${SERVICES- }
       - DEBUG=${DEBUG- }
